[project]
name = "fastapi-redis-session"
version = "0.3.0"
description = "A redis-based session backend for Fastapi apps"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "duyixian", email = "duyixian1234@qq.com" }]
license = "MIT"
dependencies = [
  "fastapi>=0.70.0,<0.71.0",
  "redis>=6.0.0,<7.0.0",
]

[project.urls]
Repository = "https://github.com/duyixian1234/fastapi-redis-session"

[dependency-groups]
dev = [
  "black>=24.8.0,<25.0.0",
  "coverage[toml]>=7.6.0,<8.0.0",
  "mypy>=1.11.2,<2.0.0",
  "pylint>=3.2.7,<4.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "requests>=2.32.3,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastapi_redis_session"]

[tool.pylint.master]
job = 0
suggestion-mode = "yes"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
argument-naming-style = "any"
attr-naming-style = "any"
function-naming-style = "any"
method-naming-style = "any"
variable-naming-style = "any"

[tool.pylint.message_control]
disable = ["missing-docstring", "logging-fstring-interpolation"]

[tool.pylint.design]
min-public-methods = 0

[tool.pytest.ini_options]
addopts = " -svv --cov=fastapi_redis_session"
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
fail_under = 90.0
show_missing = true
skip_covered = true
skip_empty = true
sort = "miss"

[tool.coverage.path]
source = "fastapi_redis_session"

[tool.black]
line-length = 120
